--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,18 +1,17 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/${DATABASE}
+    url: jdbc:mysql://localhost:3306/s3_image
     driver-class-name: com.mysql.cj.jdbc.Driver
-    username: ${USERNAME}
-    password: ${PASSWORD}
+    username: root
+    password: 1234
 
-    jpa:
+  jpa:
+    hibernate:
+      ddl-auto: ${DDL_AUTO}
+    show-sql: true
+    properties:
       hibernate:
-        ddl-auto: ${DDL_AUTO}
-
-      show-sql: true
-      properties:
-        hibernate:
-          format_sql: true
+        format_sql: true
 
 cloud:
   aws:
